<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/text_size_16"
    tools:context=".produtos.ValorTotalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivCarrinhoComprasValorTotal"
        android:layout_width="@dimen/size_80"
        android:layout_height="@dimen/size_80"
        android:contentDescription="@string/carrinho_compras_description"
        android:src="@drawable/carrinho_de_compras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="150dp"/>

    <TextView
        android:id="@+id/tvValorTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_total_txt"
        app:layout_constraintTop_toBottomOf="@id/ivCarrinhoComprasValorTotal"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_16"/>

    <Button
        android:id="@+id/btnCadastrarNovoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/cadastrar_novo_produto_btn_txt"
        android:layout_marginVertical="@dimen/margin_50"
        app:layout_constraintTop_toBottomOf="@id/tvValorTotal"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnVerProdutos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/ver_produtos_txt_btn"
        android:layout_marginVertical="@dimen/margin_20"
        app:layout_constraintTop_toBottomOf="@id/btnCadastrarNovoProduto"
        app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>