<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".apresentacao.ApresentacaoFragment"
    android:layout_margin="@dimen/margin_16"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:id="@+id/navHostFragment">

    <ImageView
        android:id="@+id/ivBandeirinhaApresentacao"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/description_text_bandeirinhas"
        android:src="@drawable/balao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvApresentacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/apresentacao_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBandeirinhaApresentacao"
        android:layout_margin="@dimen/margin_16"
        android:textSize="@dimen/text_size_12"/>

    <Button
        android:id="@+id/btn_ir_produtos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/ir_para_produtos_text"
        app:layout_constraintTop_toBottomOf="@+id/tvApresentacao"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>